--- a/package.json
+++ b/package.json
@@ -11,31 +11,33 @@
     "clean": "rimraf dist"
   },
   "dependencies": {
-    "express": "^4.18.2",
+    "compression": "^1.8.0",
     "cors": "^2.8.5",
-    "helmet": "^7.0.0",
-    "compression": "^1.7.4",
-    "winston": "^3.10.0",
-    "express-rate-limit": "^6.10.0",
-    "node-cron": "^3.0.2",
-    "uuid": "^9.0.0",
-    "joi": "^17.9.2",
-    "dotenv": "^16.3.1"
+    "dotenv": "^17.2.0",
+    "express": "^4.18.2",
+    "express-rate-limit": "^8.0.0",
+    "helmet": "^8.1.0",
+    "joi": "^17.13.3",
+    "node-cron": "^4.2.1",
+    "puppeteer": "^24.13.0",
+    "uuid": "^11.1.0",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
+    "@types/compression": "^1.8.1",
+    "@types/cors": "^2.8.19",
     "@types/express": "^4.17.17",
-    "@types/cors": "^2.8.13",
-    "@types/compression": "^1.7.2",
-    "@types/uuid": "^9.0.2",
-    "@types/node": "^20.5.0",
-    "typescript": "^5.1.6",
+    "@types/jest": "^30.0.0",
+    "@types/node": "^24.0.14",
+    "@types/uuid": "^10.0.0",
+    "jest": "^30.0.4",
+    "rimraf": "^6.0.1",
+    "ts-jest": "^29.4.0",
     "ts-node-dev": "^2.0.0",
-    "@types/jest": "^29.5.3",
-    "jest": "^29.6.2",
-    "ts-jest": "^29.1.1",
-    "rimraf": "^5.0.1"
+    "typescript": "^5.8.3"
   },
   "engines": {
-    "node": ">=18.0.0"
+    "node": ">=18.0.0",
+    "pnpm": ">=10"
   }
 }
