--- a/.gitignore
+++ b/.gitignore
@@ -126,7 +126,7 @@ install-service-temp.js
 uninstall-service-temp.js
 
 
-# Lock files (choose one based on your package manager)
+# Lock files 
 package-lock.json
 yarn.lock
 pnpm-lock.yaml
